@@ -6,9 +6,8 @@ import com.caps.objects.GameObject;
 
 public class Queue {
 	
-	private LinkedList<GameObject> entitieQueue = new LinkedList<GameObject>();
-	private LinkedList<Integer> entitieTickQueue = new LinkedList<Integer>();
-	private LinkedList<GridCell> entitieEndCell = new LinkedList<GridCell>();
+	public LinkedList<GameObject> entitieQueue = new LinkedList<GameObject>();
+	public LinkedList<Integer> entitieTickQueue = new LinkedList<Integer>();
 	private Handler handler;
 	private Grid grid;
 	
@@ -19,11 +18,13 @@ public class Queue {
 	
 	public void tick(){
 		if(entitieQueue.size() > 0){
-			entitieTickQueue.set(0, entitieTickQueue.get(0) - 1);
+			entitieTickQueue.set(0, entitieTickQueue.getFirst() - 1);
 			if(entitieTickQueue.get(0) == 0){
-				GameObject g = entitieQueue.get(0);
-				g.setPath(grid.calculatePath(grid.cordsToGridCells((int) g.getX(), (int) g.getY()), entitieEndCell.get(0)));
-				handler.addObject(entitieQueue.get(0));
+				GameObject g = entitieQueue.getFirst();
+				handler.addObject(entitieQueue.getFirst());
+				g.velX = 1;
+				g.velY = 1;
+				g.setPath(grid.calculatePath(grid.cordsToGridCells((int) g.getX(), (int) g.getY()), handler.flag.waypoint));
 				removeFirst();
 			}
 		}
@@ -33,11 +34,13 @@ public class Queue {
 	public void addToQueue(GameObject object, int ticks, GridCell endCell){
 		entitieQueue.add(object);
 		entitieTickQueue.add(ticks);
-		entitieEndCell.add(endCell);
 	}
 	private void removeFirst(){
-		entitieQueue.remove(0);
-		entitieTickQueue.remove(0);
-		entitieEndCell.remove(0);
+		entitieQueue.removeFirst();
+		entitieTickQueue.removeFirst();
+	}
+	public void removeIndex(int i){
+		entitieQueue.remove(i);
+		entitieTickQueue.remove(i);
 	}
 }
